--- a/client/src/index.css
+++ b/client/src/index.css
@@ -89,6 +89,7 @@ tbody tr:nth-child(odd) {
 .nav {
   display: flex;
   padding: 1em 2em;
+  justify-content: space-between;  
 }
 
 .nav ul {
@@ -103,16 +104,20 @@ tbody tr:nth-child(odd) {
   justify-content: center;
   font-size: 2em;
   font-weight: 900;
+  align-items: center;
+  margin-right: 7em;
 }
 
 .nav-title a {
-  color: #b864c4;
+  color: #d66ae4;
+  text-shadow: 0 0 10px #91479b;
 }
 
 .nav-item {
   display: block;
   margin-left: auto;
   list-style: none;
+  margin-left: 7em;
 }
 
 .nav-link {
@@ -250,6 +255,12 @@ tbody tr:nth-child(odd) {
   align-items: center;
   justify-content: center;
 }
+
+.login-notice h1 {
+  color: #d66ae4;
+  text-shadow: 0 0 10px #91479b;
+}
+
 
 
 @media (prefers-color-scheme: light) {
