--- a/client/src/index.css
+++ b/client/src/index.css
@@ -155,6 +155,8 @@ tbody tr:nth-child(odd) {
 
 .todo {
   background-color: #e9cbec;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 
 .inprogress {
@@ -163,6 +165,8 @@ tbody tr:nth-child(odd) {
 
 .done {
   background-color: #732381;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 .ticket-card {
